# TaskManager

./: AbortState.h  CLIManager.h  CMakeLists.txt  IdleState.h  PauseState.h  README.md  StartState.h  State.h  Task.cpp  Task.h  TaskManager.h  main.cpp
cli_dir/: CMakeLists.txt
state_dir/: AbortState.h  CMakeLists.txt  IdleState.h  PauseState.h  StartState.h
task_dir/: CMakeLists.txt  Task.h
